have link ready to go to the chat

--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
   <meta name="mobile-web-app-capable" content="yes">
 
   <link rel="icon" href="/favicon.ico" />
-  <title>React.js Boilerplate</title>
+  <title>Passione</title>
 </head>
 
 <body>
@@ -24,6 +24,8 @@
   <!-- The app hooks into this div -->
   <div id="app"></div>
 
+  <!-- Baskervville Font -->
+  <link href="https://fonts.googleapis.com/css?family=Baskervville:400,400i&display=swap" rel="stylesheet">
   <!-- Open Sans Font -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
 
