update styles, font loaded, and socails

--- a/app/index.html
+++ b/app/index.html
@@ -24,14 +24,15 @@
   <!-- The app hooks into this div -->
   <div id="app"></div>
 
-  <!-- Baskervville Font -->
-  <link href="https://fonts.googleapis.com/css?family=Baskervville:400,400i&display=swap" rel="stylesheet">
+  <!-- Fonts -->
+  <!-- Libre Caslon Text Font -->
+  <!-- Monsterrat Font -->
   <link
     href="https://fonts.googleapis.com/css?family=Libre+Caslon+Text|Montserrat+Subrayada:700|Montserrat:700&display=swap"
     rel="stylesheet">
+  <!-- Font Awesome Icons -->
+  <script src="https://kit.fontawesome.com/9cc5ad7582.js" crossorigin="anonymous"></script>
 
-  <!-- Open Sans Font -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
   
   <!-- <script src="https://unpkg.com/blotterjs-fork@0.1.0/build/blotter.min.js"></script> -->
   <!-- A lot of magic happens in this file. HtmlWebpackPlugin automatically injects all assets (e.g. bundle.js, main.css) with the correct HTML tags, which is why they are missing in this file. Don't add any assets here! (Check out webpack.dev.babel.js and webpack.prod.babel.js if you want to know more) -->
